Bug 142547 - Crash when adding comment in a table in Writer
Summary: Crash when adding comment in a table in Writer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2021-05-28 18:27 UTC by Aron Budea
Modified: 2021-05-28 21:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (18.06 KB, text/plain)
2021-05-28 18:27 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-05-28 18:27:29 UTC
Created attachment 172420 [details]
Backtrace

Add a table to a document, and add a comment in one of the cells.

=> Crash.
Only with GTK3 VCL plugin, not with gen.

Occurs in LO 7.2.0.0.alpha1+ (bd88d5a7919672e89e57a31bf4262aab676e0195) / Ubuntu.

Regression from the following commit. Adding CC: to Noel Grandin.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=819b30e937d227d1458ecc22b09ef994ebe7e17e
author		Noel Grandin <noel.grandin@collabora.co.uk>	2021-05-19 14:47:19 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-05-19 18:18:53 +0200

tdf#142367 Writer crashes when opening docx
Comment 1 Commit Notification 2021-05-28 20:25:07 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8d83093e36e973f4d188682ac2bfa9a6d80622f3

tdf#142547 Crash when adding comment in a table in Writer

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Aron Budea 2021-05-28 21:40:54 UTC
No crash now, thanks for the quick fix, Noel!

LO 7.2.0.0.alpha1+ (75b6b7f66b6ff66f8d9945bccdef71952db2d966)