tdf#142547 Crash when adding comment in a table in Writer

regression from
    commit 819b30e937d227d1458ecc22b09ef994ebe7e17e
    Date:   Wed May 19 14:47:19 2021 +0200
    tdf#142367 Writer crashes when opening docx

Change-Id: I47050391e36c4fa40519f029171e663a456fcb25